--- a/new/index.html
+++ b/new/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf8">
     <title>Матер и Маргарита</title>
     <link rel="stylesheet" href="./style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@1,500&family=Merriweather:wght@700&display=swap" rel="stylesheet">
   </head>
 
   <body>
